appId: com.anonymous.practiceexpofirebasee2emaestro
---
- launchApp
- tapOn: 'Explore.*'
- tapOn: '.*File-based routing'
- assertVisible: 'This app has two screens.*'
